change the footer image path

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         
       </div>
       <div class="half-width">
-        <img class="XMLID" src="Image/XMLID 1.png" alt="">
+        <img class="XMLID" src="Cart/foteer.png" alt="">
 
       </div>
     </section>
